--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
-            <ul>
+            <ul ng-repeat="contact in vm.contacts">
                 <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                  <label>Name: {{ contact.name }}</label>
+                  <input ng-model="contact.name"/>
+                  <label>Phone: {{ contact.phone }}</label>
+                  <input ng-model="contact.phone"/>
                 </li>
             </ul>
+            <button ng-click="vm.addContact()">Add Contact</button>
+            <button ng-click="vm.removeContact()">Remove Contact</button>
         </div>
     </div>
 
