--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                <li ng-repeat="contact in vm.contacts">
+                    <h4>{{ contact.name }}</h4>
+                    <h6>{{ contact.phone }}</h6>
+                </li>
+            </ul>
+            <ul>
+                <li ng-repeat="contact in vm.contacts">
+                    <input ng-model="contact.name" placeholder="contact.name">
+                    <input ng-model="contact.phone" placeholder="contact.phone">
                 </li>
             </ul>
         </div>
