--- a/index.html
+++ b/index.html
@@ -11,11 +11,18 @@
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                <li ng-repeat="contact in vm.contacts">
+                    <h4>Name: <input ng-model="contact.name" /></h4>
+                    <p>{{ contact.name }}</p>
+
+                    <h6>Phone: <input ng-model="contact.phone" /></h6>
+                    <p>{{ contact.phone }}</p>
                 </li>
             </ul>
+
+            <input ng-model="vm.newContact.name" placeholder="Name" />
+            <input ng-model="vm.newContact.phone" placeholder="Phone" />
+            <button ng-click="vm.addContact()">Add Contact</button>
         </div>
     </div>
 
