--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                <li ng-repeat="contact in vm.contacts">
+                    <h4><input ng-model="contact.name" /></h4>
+                    <h6><input ng-model="contact.phone" /></h6>
                 </li>
+                <button ng-click="vm.addContact()">Add</button>
             </ul>
         </div>
     </div>
