--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 <body>
 
     <div ng-app="app">
-        <div ng-controller="ContactController as vm">
-            <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
-                </li>
-            </ul>
-        </div>
+      <div ng-controller="ContactController as vm">
+        <ul>
+          <li ng-repeat="contact in vm.contacts">
+            <input ng-model="contact.name" />
+            <input ng-model="contact.phone" />
+          </li>
+        </ul>
+        <button ng-click="vm.addContact()">Add Contact!</button>
+      </div>
     </div>
 
     <script src="js/angular.js"></script>
