--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                <li ng-repeat="contact in vm.contacts">
+                    <h4>{{ contact.name }}</h4>
+                    <h6>{{ contact.phone }}</h6>
                 </li>
             </ul>
+            <input type="button" ng-click="vm.addContact()" value="Add Contact">
         </div>
     </div>
 
