--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                     <h6>{{ contact.phone }}</h6>
                 </li>
             </ul>
+            <input type="text" ng-model="vm.name" placeholder="Name"><br>
+            <input type="text" ng-model="vm.phone" placeholder="Phone"><br>
             <input type="button" ng-click="vm.addContact()" value="Add Contact">
         </div>
     </div>
